# currency_parser_nbkr

./: README.md  app.py  currency_parser.py  pyproject.toml  rates.db  rates_table.xlsx  requirements.txt  пароль от базы supabase.docx
templates/: index.html
