[tool.poetry]
name = "currency-parser-nbkr"
version = "0.1.0"
description = "A web application to parse and track currency rates from NBKR"
authors = ["Bektursun Esenturuulu <bektursunesenturuulu1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
pandas = "^2.2.2"
requests = "^2.32.3"
lxml = "^5.2.2"
openpyxl = "^3.1.2"
gunicorn = "^22.0.0"
SQLAlchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
